[package]
name = "ncal"
version = "0.1.0"
edition = "2024"
description = "A Nepali calendar for the terminal."
license = "MIT"
authors= ["rajatdahal contact@rajatdahal.com.np"]

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
sys-locale = "0.3.2"
thiserror = "2.0.18"
